--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ layout: default
 						<p>I studied <a href="https://www.colorado.edu/ecee/">electrical & computer engineering</a> at the University of Colorado, and I'm wrapping up a master's in <a href="https://www.hcde.washington.edu/about">human-centered design & engineering</a> at the University of Washington. I love to draw on both these backgrounds in my work—to tackle the abstract and "make it real."
 
 						<p>In my spare time, you'll find me snapping photos in new places, grooving behind a pair of turntables, and doting on my amazing cat, Rocco. I'm always cooking away on a side project or two. Want to make something cool together? <a href="#contact">Drop me a line</a>.</p>
-						<a class="about-downloadButton" href="{{site.baseurl}}David Rappaport résumé.pdf" target="_blank"><i class="fa fa-file-download"></i> VIEW RESUME</a>
+						<a class="about-downloadButton" href="djrapp.github.io/David Rappaport résumé.pdf" target="_blank"><i class="fa fa-file-download"></i> VIEW RESUME</a>
 
 					</div>
 
