--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default
 						</div>
 						<p>I’m an innovator, a deep generalist, and a believer in creating things which meaningfully touch and improve people’s lives. Currently, I'm driving development of cutting-edge hardware products with Microsoft's <a href="https://www.microsoft.com/appliedsciences/">Applied Sciences</a> incubation team.</p>
 
-						<p>I studied <a href="https://www.colorado.edu/ecee/">Electrical & Computer Engineering</a> at the University of Colorado, and I'm wrapping up a master's in <a href="https://www.hcde.washington.edu/about">Human Centered Design & Engineering</a> at the University of Washington. I love to draw on both these backgrounds in my work, tackling the abstract and making it real.
+						<p>I studied <a href="https://www.colorado.edu/ecee/">Electrical & Computer Engineering</a> at the University of Colorado, followed by a master's in <a href="https://www.hcde.washington.edu/about">Human Centered Design & Engineering</a> at the University of Washington. I love to draw on both these backgrounds in my work, tackling the abstract and making it real.
 
 						<p>In my spare time, you'll find me snapping photos in new places, grooving behind a pair of turntables, and doting on my amazing cat, Rocco. I'm always cooking away on a side project or two. Want to make something cool together? <a href="#contact">Drop me a line</a>.</p>
 						<a class="about-downloadButton" href="David J. Rappaport.pdf" target="_blank"><i class="fa fa-file-download"></i> VIEW RESUME</a>
