--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ layout: default
 							</h2>
 							<div class="module-line"></div>
 						</div>
-						<p>I’m an innovator, a deep generalist, and a believer in creating things which meaningfully touch and improve people’s lives. Currently, I'm driving development of cutting-edge hardware products with Microsoft's <a href="https://www.microsoft.com/appliedsciences/">Applied Sciences</a> incubation team.</p>
+						<p>I’m an innovator, a deep generalist, and a believer in creating things which meaningfully touch and improve people’s lives. Currently, I'm a product manager at <a href="https://whisper.ai/">Whisper.ai</a>, where we are creating hearing aids that use AI to improve over time. Previously, I drove development of cutting-edge hardware products with the <a href="https://www.microsoft.com/appliedsciences/">Applied Sciences</a> incubation team at Microsoft.</p>
 
-						<p>I studied <a href="https://www.colorado.edu/ecee/">Electrical & Computer Engineering</a> at the University of Colorado, followed by a master's in <a href="https://www.hcde.washington.edu/about">Human Centered Design & Engineering</a> at the University of Washington. I love to draw on both these backgrounds in my work, tackling the abstract and making it real.
+						<p>I studied <a href="https://www.colorado.edu/ecee/">Electrical & Computer Engineering</a> at the University of Colorado, followed by a master's in <a href="https://www.hcde.washington.edu/about">Human Centered Design & Engineering</a> at the University of Washington. I love to draw on both these backgrounds in my work, tackling complex problems and crafting real-world solutions.
 
-						<p>In my spare time, you'll find me snapping photos in new places, grooving behind a pair of turntables, and doting on my amazing cat, Rocco. I'm always cooking away on a side project or two. Want to make something cool together? <a href="#contact">Drop me a line</a>.</p>
+						<p>In my spare time, you'll find me doting on my amazing cat Rocco, turning knobs on synthesizers, and probably cooking away on a side project or two. Want to make something cool together? <a href="#contact">Get in touch</a>.</p>
 						<a class="about-downloadButton" href="David J. Rappaport.pdf" target="_blank"><i class="fa fa-file-download"></i> VIEW RESUME</a>
 
 					</div>
