--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: default
 							</h2>
 							<div class="module-line"></div>
 						</div>
-						<p>I’m an innovator, a deep generalist, and a believer in creating things which meaningfully touch and improve people’s lives. Currently, I'm a product manager at <a href="https://whisper.ai/">Whisper.ai</a>, where we are creating hearing aids that use AI to improve over time. Previously, I drove development of cutting-edge hardware products (<a href="https://www.theverge.com/2022/3/22/22990673/microsoft-surface-hub-2-smart-camera-interview-report/">one example here</a>) with the <a href="https://www.microsoft.com/appliedsciences/">Applied Sciences</a> incubation team at Microsoft.</p>
+						<p>I’m an innovator, a deep generalist, and a believer in creating things which meaningfully touch and improve people’s lives. Currently, I'm a product manager at <a href="https://whisper.ai/">Whisper.ai</a>, where we are creating hearing aids that use AI to improve over time. Previously, I drove development of cutting-edge hardware products (like the <a href="https://www.theverge.com/2022/3/22/22990673/microsoft-surface-hub-2-smart-camera-interview-report/">Surface Hub 2 Smart Camera</a>) as a Senior Product Manager for the <a href="https://www.microsoft.com/appliedsciences/">Applied Sciences</a> incubation team at Microsoft.</p>
 
 						<p>I studied <a href="https://www.colorado.edu/ecee/">Electrical & Computer Engineering</a> at the University of Colorado, followed by a master's in <a href="https://www.hcde.washington.edu/about">Human Centered Design & Engineering</a> at the University of Washington. I love to draw on both these backgrounds in my work, tackling complex problems and crafting real-world solutions.
 
