--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ layout: default
 
 						<p>In my spare time, you'll find me doting on my amazing cat Rocco, turning knobs on synthesizers, and probably cooking away on a side project or two. Want to make something cool together? <a href="#contact">Get in touch</a>.</p>
 						<a class="about-downloadButton" href="David J. Rappaport.pdf" target="_blank"><i class="fa fa-file-download"></i> VIEW RESUME</a>
+						<a class="about-downloadButton" href="https://rappaport-portfolio.carrd.co/" target="_blank"><i class="fa fa-link"></i> MY WORK</a>
 
 					</div>
 
